[package]
name = "simple-payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.16"
indexmap = "1.8.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
